--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="author" content="Jakub Piłkowski" />
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <link rel="icon" type="image/png" href="src/images/ct_icon_orange.png" />
+  <link rel="icon" type="image/png" href="images/ct_icon_orange.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500;700&display=swap" rel="stylesheet" />
@@ -23,17 +23,10 @@
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
-  <script src="https://cdn.builder.io/js/webcomponents"></script>
+  <script async src="https://cdn.builder.io/js/webcomponents"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-
-  <!-- <script src="./src/index.js"></script>
-  <script src="./src/utils.js"></script>
-  <script src="./src/map.js"></script>
-  <script src="./src/card.js"></script>
-  <script src="./src/counter.js"></script>
-  <script src="./src/carousel.js"></script> -->
 
   <link rel="stylesheet" href="./src/styles.css" />
   <link rel="stylesheet" href="./src/nav.css" />
