--- a/index.html
+++ b/index.html
@@ -42,37 +42,37 @@
   <nav>
     <div class="nav-main">
       <button class="nav-brand" data-move-to="#home">
-        <div class="brand-image-container">
-          <img src="./images/ct_icon_white.png" class="brand-image" />
+        <div class="brandimageContainer">
+          <img src="./images/ct_icon_white.png" class="brandImage" />
         </div>
-        <div class="brand-bell"></div>
+        <div class="brandBell"></div>
 
-        <h2 class="brand-name">Centrum <br /> Telefonii</h2>
+        <h2 class="brandName">Centrum <br /> Telefonii</h2>
       </button>
     </div>
-    <div class="nav-links is-desktop">
-      <button class="nav-link" data-move-to="#service">Oferta</button>
-      <button class="nav-link" data-move-to="#map">Jak dojechać</button>
-      <button class="nav-link" data-move-to="#news">Aktualności</button>
-      <button class="nav-link" data-move-to="footer">Kontakt</button>
+    <div class="navLinks is-desktop">
+      <button class="navLink" data-move-to="#service">Oferta</button>
+      <button class="navLink" data-move-to="#map">Jak dojechać</button>
+      <button class="navLink" data-move-to="#news">Aktualności</button>
+      <button class="navLink" data-move-to="footer">Kontakt</button>
     </div>
-    <button id="hamburger" class="hamburger-icon is-mobile is-tablet">
-      <div class="hamburger-bell"></div>
-      <div class="hamburger-bell"></div>
-      <div class="hamburger-bell"></div>
+    <button id="hamburger" class="hamburgerIcon is-mobile is-tablet">
+      <div class="hamburgerBell"></div>
+      <div class="hamburgerBell"></div>
+      <div class="hamburgerBell"></div>
     </button>
   </nav>
-  <div class="hamburger-menu menu-closed is-mobile is-tablet">
-    <div class="hamburger-container">
-      <div class="hamburger-header">
+  <div class="hamburgerMenu menuClosed is-mobile is-tablet">
+    <div class="hamburgerContainer">
+      <div class="hamburgerHeader">
         <button class="nav-brand" data-move-to="#home">
-          <div class="brand-image-container">
-            <img src="./images/ct_icon_white.png" class="brand-image" />
+          <div class="brandimageContainer">
+            <img src="./images/ct_icon_white.png" class="brandImage" />
           </div>
-          <div class="brand-bell"></div>
-          <h2 class="brand-name">Centrum <br /> Telefonii</h2>
+          <div class="brandBell"></div>
+          <h2 class="brandName">Centrum <br /> Telefonii</h2>
         </button>
-        <button id="hamburger-close" class="hamburger-close">
+        <button id="hamburgerClose" class="hamburgerClose">
           <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 24 24" id="vector">
             <path id="path"
               d="M 19 6.41 L 17.59 5 L 12 10.59 L 6.41 5 L 5 6.41 L 10.59 12 L 5 17.59 L 6.41 19 L 12 13.41 L 17.59 19 L 19 17.59 L 13.41 12 Z"
@@ -80,32 +80,32 @@
           </svg>
         </button>
       </div>
-      <button class="hamburger-item" data-move-to="#service">Oferta</button>
-      <button class="hamburger-item" data-move-to="#map">Jak dojechać</button>
-      <button class="hamburger-item" data-move-to="#news">Aktualności</button>
-      <button class="hamburger-item" data-move-to="footer">Kontakt</button>
+      <button class="hamburgerItem" data-move-to="#service">Oferta</button>
+      <button class="hamburgerItem" data-move-to="#map">Jak dojechać</button>
+      <button class="hamburgerItem" data-move-to="#news">Aktualności</button>
+      <button class="hamburgerItem" data-move-to="footer">Kontakt</button>
     </div>
   </div>
   <header class="jumbotron" id="home">
     <img src="./images/ct_kosciuszki.jpg" class="background" />
-    <div class="jumbotron-card">
-      <div class="jumbotron-details">
-        <h1 class="jumbotron-title">Centrum Telefonii</h1>
-        <div class="jumbotron-description">
+    <div class="jumbotronCard">
+      <div class="jumbotronDetails">
+        <h1 class="jumbotronTitle">Centrum Telefonii</h1>
+        <div class="jumbotronDescription">
           <p>
-            <span class="jumbotron-description-bounce-span">Najwyższa</span> jakość
+            <span class="jumbotronDescriptionBounceSpan">Najwyższa</span> jakość
           </p>
           <p>
-            <span class="jumbotron-description-bounce-span">Najniższe</span> ceny
+            <span class="jumbotronDescriptionBounceSpan">Najniższe</span> ceny
           </p>
           <p>
-            <span class="jumbotron-description-bounce-span">Serwis</span> smartfonów
+            <span class="jumbotronDescriptionBounceSpan">Serwis</span> smartfonów
           </p>
           <p>
-            <span class="jumbotron-description-bounce-span">Sprzedaż</span> akcesorii
+            <span class="jumbotronDescriptionBounceSpan">Sprzedaż</span> akcesorii
           </p>
         </div>
-        <div class="jumbotron-buttons">
+        <div class="jumbotronButtons">
           <a href="tel:+48 (89)533-71-32">
             <button class="action-button call-button" id="header-call-button">
               <p>Wycena naprawy?</p>
@@ -151,41 +151,41 @@
     </button>
   </a>
 
-  <div class="wrapper-outer offer-wrapper-outer">
+  <div class="wrapperOuter offerWrapperOuter">
     <div class="wrapper">
       <section id="service" class="offer">
-        <div class="offer-container">
-          <div class="offer-images service-images slide-animation-left" id="service-images">
-            <div class="image-container-wrapper">
-              <div class="image-container show">
-                <div class="offer-image-wrapper service-image-wrapper">
+        <div class="offerContainer">
+          <div class="offerImages serviceImages slideAnimationLeft" id="serviceImages">
+            <div class="imageContainerWrapper">
+              <div class="imageContainer show">
+                <div class="offerImageWrapper serviceImageWrapper">
                   <img src="./images/phone_white_d.jpg" class="img-first" alt="Telefon biały zepsuty" />
                 </div>
-                <div class="offer-image-wrapper service-image-wrapper">
+                <div class="offerImageWrapper serviceImageWrapper">
                   <img src="./images/phone_black_d.jpg" class="img-first" alt="Telefony czarny zepsuty" />
                 </div>
               </div>
-              <div class="image-container hide">
-                <div class="offer-image-wrapper service-image-wrapper">
+              <div class="imageContainer hide">
+                <div class="offerImageWrapper serviceImageWrapper">
                   <img src="./images/phone_white_r.jpg" class="img-first" alt="Telefon biały zepsuty" />
                 </div>
-                <div class="offer-image-wrapper service-image-wrapper">
+                <div class="offerImageWrapper serviceImageWrapper">
                   <img src="./images/phone_black_r.jpg" class="img-first" alt="Telefony czarny zepsuty" />
                 </div>
               </div>
             </div>
-            <h3 class="image-label">Przed</h3>
+            <h3 class="imageLabel">Przed</h3>
           </div>
-          <div class="offer-list-container service-list-container slide-animation-right" id="service-list">
+          <div class="offerListContainer serviceListContainer slideAnimationRight" id="serviceList">
             <h1>
-              <span class="material-icons build-icon">
+              <span class="material-icons buildIcon">
                 construction
               </span>
               <span>
                 Serwis
               </span>
             </h1>
-            <ul class="offer-list service-list ">
+            <ul class="offerList serviceList ">
               <li>Wymiana ekranów, gniazd, baterii, aparatów</li>
               <li>Naprawa głośników, mikrofonów, aparatów w telefonie</li>
               <li>Wymiana gniazd oraz baterii</li>
@@ -199,15 +199,15 @@
         </div>
       </section>
       <section id="accessories" class="offer">
-        <div class="offer-container">
-          <div class="offer-list-container slide-animation-left" id="accessories-list">
+        <div class="offerContainer">
+          <div class="offerListContainer slideAnimationLeft" id="accessories-list">
             <h1>
               <span>Akcesoria</span>
-              <span class="material-icons phone-icon">
+              <span class="material-icons phoneIcon">
                 phone_iphone
               </span>
             </h1>
-            <ul class="offer-list accessories-list">
+            <ul class="offerList accessories-list">
               <li>Etui, pokrowce oraz casy</li>
               <li>Szkła hartowane</li>
               <li>Kable, ładowarki sieciowe oraz samochodowe</li>
@@ -217,21 +217,21 @@
               <li>Karty pamięci</li>
             </ul>
           </div>
-          <div class="offer-images slide-animation-right" id="accessories-images">
-            <div class="image-container-wrapper">
-              <div class="image-container show">
-                <div class="offer-image-wrapper accessories-image-wrapper">
+          <div class="offerImages slideAnimationRight" id="accessories-images">
+            <div class="imageContainerWrapper">
+              <div class="imageContainer show">
+                <div class="offerImageWrapper accessories-image-wrapper">
                   <img src="./images/etui_venus.png" alt="Etui marki venus" />
                 </div>
-                <div class="offer-image-wrapper accessories-image-wrapper">
+                <div class="offerImageWrapper accessories-image-wrapper">
                   <img src="./images/szklo_9d.png" alt="Szkło hartowane 9D" />
                 </div>
               </div>
-              <div class="image-container hide">
-                <div class="offer-image-wrapper accessories-image-wrapper">
+              <div class="imageContainer hide">
+                <div class="offerImageWrapper accessories-image-wrapper">
                   <img src="./images/guma_jelly.png" alt="Case marki Jelly" />
                 </div>
-                <div class="offer-image-wrapper accessories-image-wrapper">
+                <div class="offerImageWrapper accessories-image-wrapper">
                   <img src="./images/ladowarka.png" alt="Ładowarka sieciowa" />
                 </div>
               </div>
@@ -242,7 +242,7 @@
     </div>
   </div>
 
-  <div class="wrapper-outer main-wrapper-outer">
+  <div class="wrapperOuter mainWrapperOuter">
     <div class="wrapper">
       <section id="timers">
         <h1 class="title">Centrum Telefonii to...</h1>
@@ -270,7 +270,7 @@
       </section>
       <div class="timers-triangle"></div>
       <section id="map">
-        <div class="map-title-wrapper-outer">
+        <div class="map-title-wrapperOuter">
           <div class="map-title-wrapper-inner">
             <h1 class="map-title">Jak dojechać</h1>
           </div>
