Apply css modules to all components. Implement next/Image component. Start fixing Nav component logic

--- a/index.html
+++ b/index.html
@@ -200,14 +200,14 @@
       </section>
       <section id="accessories" class="offer">
         <div class="offerContainer">
-          <div class="offerListContainer slideAnimationLeft" id="accessories-list">
+          <div class="offerListContainer slideAnimationLeft" id="accessoriesList">
             <h1>
               <span>Akcesoria</span>
               <span class="material-icons phoneIcon">
                 phone_iphone
               </span>
             </h1>
-            <ul class="offerList accessories-list">
+            <ul class="offerList accessoriesList">
               <li>Etui, pokrowce oraz casy</li>
               <li>Szkła hartowane</li>
               <li>Kable, ładowarki sieciowe oraz samochodowe</li>
@@ -220,18 +220,18 @@
           <div class="offerImages slideAnimationRight" id="accessories-images">
             <div class="imageContainerWrapper">
               <div class="imageContainer show">
-                <div class="offerImageWrapper accessories-image-wrapper">
+                <div class="offerImageWrapper accessoriesImageWrapper">
                   <img src="./images/etui_venus.png" alt="Etui marki venus" />
                 </div>
-                <div class="offerImageWrapper accessories-image-wrapper">
+                <div class="offerImageWrapper accessoriesImageWrapper">
                   <img src="./images/szklo_9d.png" alt="Szkło hartowane 9D" />
                 </div>
               </div>
               <div class="imageContainer hide">
-                <div class="offerImageWrapper accessories-image-wrapper">
+                <div class="offerImageWrapper accessoriesImageWrapper">
                   <img src="./images/guma_jelly.png" alt="Case marki Jelly" />
                 </div>
-                <div class="offerImageWrapper accessories-image-wrapper">
+                <div class="offerImageWrapper accessoriesImageWrapper">
                   <img src="./images/ladowarka.png" alt="Ładowarka sieciowa" />
                 </div>
               </div>
@@ -246,49 +246,49 @@
     <div class="wrapper">
       <section id="timers">
         <h1 class="title">Centrum Telefonii to...</h1>
-        <div class="timers-wrapper">
-          <div id="clients" class="timer-item">
-            <span class="material-icons timer-icon">
+        <div class="timersWrapper">
+          <div id="clients" class="timerItem">
+            <span class="material-icons timerIcon">
               sentiment_satisfied_alt
             </span>
             <h1>9999</h1>
             <h2>tysiące zadowolonych klientów</h2>
           </div>
 
-          <div id="repairs" class="timer-item">
-            <img src="./images/klucz_francuski.svg" class="timer-icon" />
+          <div id="repairs" class="timerItem">
+            <img src="./images/klucz_francuski.svg" class="timerIcon" />
             <h1>999</h1>
             <h2>setki naprawionych telefonów</h2>
           </div>
 
-          <div id="brand" class="timer-item">
-            <img src="./images/22_years.svg" class="timer-icon" />
+          <div id="brand" class="timerItem">
+            <img src="./images/22_years.svg" class="timerIcon" />
             <h1>22</h1>
             <h2>najdłużej funkcjonująca firma telefoniczna w Olsztynie</h2>
           </div>
         </div>
       </section>
-      <div class="timers-triangle"></div>
+      <div class="timersTriangle"></div>
       <section id="map">
-        <div class="map-title-wrapperOuter">
-          <div class="map-title-wrapper-inner">
-            <h1 class="map-title">Jak dojechać</h1>
+        <div class="mapTitlewrapperOuter">
+          <div class="mapTitlewrapperInner">
+            <h1 class="mapTitle">Jak dojechać</h1>
           </div>
         </div>
 
         <div class="maps">
-          <div class="map-wrapper">
-            <header class="map-iframe-header">
-              <h3 class="map-iframe-title">Punkt nr 1: ulica Kościuszki 19/2</h2>
+          <div class="mapWrapper">
+            <header class="mapIframeHeader">
+              <h3 class="mapIframeTitle">Punkt nr 1: ulica Kościuszki 19/2</h2>
             </header>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1178.6821797835114!2d20.494077557566143!3d53.78300233965278!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e2793305f876e3%3A0x6aeeae6bfa02a819!2sCentrum+Telefonii+s.c.!5e0!3m2!1spl!2spl!4v1557851864282!5m2!1spl!2spl"
               allowfullscreen></iframe>
           </div>
 
-          <div class="map-wrapper">
-            <header class="map-iframe-header">
-              <h3 class="map-iframe-title">Punkt nr 2: Plac Pułaskiego 7 lokal 62</h2>
+          <div class="mapWrapper">
+            <header class="mapIframeHeader">
+              <h3 class="mapIframeTitle">Punkt nr 2: Plac Pułaskiego 7 lokal 62</h2>
             </header>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2357.5073313268567!2d20.488660815991853!3d53.78045744980634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e27932a8723f9f%3A0x1f8d7a896ca9d506!2sCentrum%20Telefonii%20s.c.%20%C5%9Awi%C4%99cicki%20G.%2C%20Gromek-%20Pi%C5%82kowska%20H.E.!5e0!3m2!1spl!2spl!4v1600695864194!5m2!1spl!2spl"
