--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="jumbotronButtons">
           <a href="tel:+48 (89)533-71-32">
             <button class="action-button call-button" id="header-call-button">
-              <p>Wycena naprawy?</p>
+              <p>Wycena naprawy</p>
               <span class="material-icons">call</span>
             </button>
           </a>
