Change phone number

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </p>
         </div>
         <div class="jumbotronButtons">
-          <a href="tel:+48 (89)533-71-32">
+          <a href="tel:+48 604-436-345">
             <button class="action-button call-button" id="header-call-button">
               <p>Wycena naprawy</p>
               <span class="material-icons">call</span>
@@ -134,7 +134,7 @@
     </svg>
   </header>
 
-  <a href="tel:+48 (89)533-71-32">
+  <a href="tel:+48 604-436-345">
     <button class="action-button call-button floating-button" id="floating-call-button">
       <span class="material-icons">call</span>
     </button>
@@ -307,8 +307,7 @@
     </div>
     <div class="row">
       <h3 class="label">CT na ulicy Kościuszki</h3>
-      <a class="text" href="tel:668-226-158"> 668-226-158 </a>
-      <a class="text" href="tel:+48 (89)533-71-32"> +48 (89)533-71-32 </a>
+      <a class="text" href="tel:+48 604-436-345"> 604-436-345 </a>
       <h4 class="text">ul.Kościuszki 19/2 Olsztyn</h4>
       <h4 class="text">Poniedziałek-Piątek: 9:00-18:00</h4>
       <h4 class="text">Sobota: 9:00-15:00</h4>
