Remove Kościuszki 19/2 location from maps and contact information

--- a/index.html
+++ b/index.html
@@ -279,16 +279,7 @@
         <div class="maps">
           <div class="mapWrapper">
             <header class="mapIframeHeader">
-              <h3 class="mapIframeTitle">Punkt nr 1: ulica Kościuszki 19/2</h2>
-            </header>
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1178.6821797835114!2d20.494077557566143!3d53.78300233965278!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e2793305f876e3%3A0x6aeeae6bfa02a819!2sCentrum+Telefonii+s.c.!5e0!3m2!1spl!2spl!4v1557851864282!5m2!1spl!2spl"
-              allowfullscreen></iframe>
-          </div>
-
-          <div class="mapWrapper">
-            <header class="mapIframeHeader">
-              <h3 class="mapIframeTitle">Punkt nr 2: Plac Pułaskiego 7 lokal 62</h2>
+              <h3 class="mapIframeTitle">Plac Pułaskiego 7 lokal 62</h2>
             </header>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2357.5073313268567!2d20.488660815991853!3d53.78045744980634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e27932a8723f9f%3A0x1f8d7a896ca9d506!2sCentrum%20Telefonii%20s.c.%20%C5%9Awi%C4%99cicki%20G.%2C%20Gromek-%20Pi%C5%82kowska%20H.E.!5e0!3m2!1spl!2spl!4v1600695864194!5m2!1spl!2spl"
@@ -305,13 +296,7 @@
       <h3 class="label">Centrum Telefonii s.c. ®</h3>
       <h4 class="text">E-mail: centrumtelefoniiolsztyn@gmail.com</h4>
     </div>
-    <div class="row">
-      <h3 class="label">CT na ulicy Kościuszki</h3>
-      <a class="text" href="tel:+48 604-436-345"> 604-436-345 </a>
-      <h4 class="text">ul.Kościuszki 19/2 Olsztyn</h4>
-      <h4 class="text">Poniedziałek-Piątek: 9:00-18:00</h4>
-      <h4 class="text">Sobota: 9:00-15:00</h4>
-    </div>
+
     <div class="row">
       <h3 class="label">CT w Manhattanie</h3>
       <a class="text" href="tel:698-390-390"> 698-390-390 </a>
